Added angular test module with jasmine and karma

--- a/ProjectManager/src/app/projects/project-list/project-list.component.html
+++ b/ProjectManager/src/app/projects/project-list/project-list.component.html
@@ -66,15 +66,15 @@
         </li>
       </ul>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-22">
       <ul class="list-group">
         <li class="list-group-item">
-          <button type="button" class="btn btn-lg btn-block btn-secondary" (click)="showForEdit(project)">Edit</button>
+          <button type="button" class="btn btn-sm btn-block btn-secondary" (click)="showForEdit(project)">Edit</button>
         </li>
       </ul>
       <ul class="list-group">
         <li class="list-group-item">
-          <button type="button" class="btn btn-lg btn-block btn-secondary" (click)="onDelete(project.Project_ID)">Suspend</button>
+          <button type="button" class="btn btn-sm btn-block btn-secondary" (click)="onDelete(project.Project_ID)">Suspend</button>
         </li>
       </ul>
     </div>
