--- a/ProjectManager/src/app/projects/project/project.component.html
+++ b/ProjectManager/src/app/projects/project/project.component.html
@@ -2,32 +2,32 @@
   <input type="hidden" name="Project_ID" #Project_ID="ngModel" [(ngModel)]="projectService.selectedProject.Project_ID">
   <input type="hidden" name="Manager_Id" #Manager_Id="ngModel" [(ngModel)]="projectService.selectedProject.Manager_Id">
   <div class="form-group">
-    <label for="ProjectName" class="col-md-1">Project:</label>
-    <div class="form-group col-md-7">
+    <label for="ProjectName" class="col-md-2">Project:</label>
+    <div class="form-group col-md-8">
       <input class="form-control " name="ProjectName" #ProjectName="ngModel" [(ngModel)]="projectService.selectedProject.ProjectName" [ngClass]="{ 'is-invalid': projectForm.submitted && ProjectName.invalid }" required>
     </div>
-    <div *ngIf="projectForm.submitted && ProjectName.invalid" class="col-md-4 invalid-feedback d-block">
+    <div *ngIf="projectForm.submitted && ProjectName.invalid" class="col-md-2 invalid-feedback d-block">
       <div *ngIf="ProjectName.errors.required">Project Name is required</div>
     </div>
   </div>
   <div class="form-group">
-    <label for="SetDate" class="col-md-1"></label>
-    <div class=" form-group col-md-3 checkbox">
+    <label for="SetDate" class="col-md-2"></label>
+    <div class="form-group col-md-3 checkbox">
       <label>
         <input type="checkbox" name="SetDate" #SetDate="ngModel" [(ngModel)]="projectService.selectedProject.SetDate" placeholder="SetDate" (change)="SetDateRange($event)">
         Set Start Date and End Date
       </label>
     </div>
-    <div class="col-md-2 padding-0">
+    <div class="form-group col-md-3">
       <input class="datepicker" [disabled]="!projectService.selectedProject.SetDate" type="text" onfocus="this.type='date'" name="Start_Date" #Start_Date="ngModel" [(ngModel)]="projectService.selectedProject.Start_Date" placeholder="Start Date">
     </div>
-    <div class="col-md-2">
+    <div class="form-group col-md-2">
       <input class="datepicker" [disabled]="!projectService.selectedProject.SetDate" type="text" onfocus="this.type='date'" name="End_Date" #End_Date="ngModel" [(ngModel)]="projectService.selectedProject.End_Date" placeholder="End Date">
     </div>
   </div>
   <div class="form-group">
-    <div class="col-md-1"></div>
-    <div class="form-group col-md-8">
+    <div class="col-md-2"></div>
+    <div class="form-group col-md-6 padding-l-0">
       0
     </div>
     <div class="form-group col-md-2 padding-0">
@@ -35,24 +35,21 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="Range" class="col-md-1">Priority:</label>
-    <div class="form-group col-md-8">
+    <label for="Range" class="col-md-2">Priority:</label>
+    <div class="form-group col-md-6 padding-l-0">
       <input class="form-control slider" name="Priority" type="range" data-slider-ticks="[0,30]" data-slider-ticks-labels="[0,30]" value="0" #Priority="ngModel" [(ngModel)]="projectService.selectedProject.Priority" min="0" max="30">
-    </div>
-    <div class="col-md-2">
     </div>
   </div>
   <div class="form-group">
-    <label for="Range" class="col-md-1">Manager:</label>
+    <label for="Range" class="col-md-2">Manager:</label>
     <div class="form-group col-md-3">
       <input name="Manager" disabled="disabled" #ManagerId="ngModel" [(ngModel)]="projectService.selectedProject.ManagerName" />
     </div>
-    <div class="col-md-8 padding-0">
+    <div class="form-group col-md-2">
       <button type="button" class="btn" value="Search" data-toggle="modal" data-target="#searchModal" (click)="showUserData()">
         Search
       </button>
     </div>
-
   </div>
   <div class="form-row">
     <label for="Range" class="col-md-6"></label>
@@ -68,7 +65,6 @@
     </div>
     <div class="col-md-2">
     </div>
-
   </div>
   <div class="form-row">
     <div class="col-md-12">
